2010-08-10  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Fixed the creation of
	tnetwork_map table creation adding the missed column 'center'

2010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/setup_auth.php: Fixed blacklist id in javascript
	  code.

2010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/export_csv.php,
	  operation/agentes/stat_win.php,
	  operation/reporting/reporting_xml.php: Fixed includes.

	* godmode/setup/setup_auth.php,
	  include/functions_config.php,
	  include/auth/mysql.php: Added support for a remote user blacklist.

	* include/help/en/help_autocreate_blacklist.php,
	  include/help/es/help_autocreate_blacklist.php: Added to repository.
	  Blacklist help files.

2010-08-10  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed several notices. When 
	a category has not maps, the menu is not showed

2010-08-10  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/default/module_unknown.png 
	images/status_sets/default/module_alertsfired.png: Added images to
	some status colors

2010-08-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Fixed a typo bug for show
	the message of succefully copied when you clone an alert action

2010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php,
	  include/functions_config.php,
	  godmode/setup/setup_auth.php: Added support fore more authentication
	  schemes (enterprise).

2010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/setup_auth.php: Added to repository. Authentication
	  scheme setup options.

010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php, include/functions_config.php,
	  include/config_process.php, pandora_console.spec,
	  ajax.php, godmode/menu.php: Added support for different
	  authentication schemes. Local database and LDAP are
	  implemented.

	* operation/agentes/networkmap.topology.php,