@@ -40,7 +40,8 @@ $config["id_user"] = $_SESSION["id_usuario"];
 session_write_close ();
 if (file_exists ($page)) {
 	require_once ($page);
-} else {
+}
+else {
 	echo '<br /><b class="error">Sorry! I can\'t find the page '.$page.'!</b>';
 }
 ?>
